# thai-o-net-llm-test

./: .gitignore  README.md  astro.config.mjs  deploy.sh  generate-data.js  index.html  main.py  model_price_icon.csv  package-lock.json  package.json  prepare_db.js  prepare_db.py  pyproject.toml  requirements.txt  tailwind.config.js  update_source.sh
src/components/: FloatingMenu.astro  Icon.astro  ModelPricesSection.astro  PriceCorrectnessSection.astro  TimeCorrectnessSection.astro
src/layouts/: Layout.astro
src/pages/: index.astro
src/scripts/: init-chart.js
