[project]
name = "llm-thai-o-net-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "duckdb>=1.2.2",
    "fastparquet>=2024.11.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
]
